--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ranbir Gill</title>
-    <link rel="stylesheet" type="text/css" href="https://gill345.github.io/style.css"
+    <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"
 </head>
 
 <body>
