--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranbir Gill</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.ico"
     <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css">
 </head>
 
+<header class="TableOfContents">
+    <h1>Ranbir Gill: </h1>
+    <nav>
+
+    </nav>
+</header>
 <body>
     <h1>Welcome To My Site</h1>
     <h3>WIP :/</h3>
