--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranbir Gill</title>
-    <link rel="icon" type="image/x-icon" href="images/icon.ico"
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css">
 </head>
 
