--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <header class="TableOfContents">
-    <h1>Ranbir Gill: </h1>
+    <img class="ranbiricon" src="images/icon.ico" alt="icon"> <h1 id="name">Ranbir Gill:</h1>
     <nav>
 
     </nav>
