--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
+            screens: {
+                sm: '480px',
+                md: '620px',
+                lg: '976px',
+                xl: '1440px',
+            },
             theme: {
                 extend: {
                     colors: {
@@ -33,37 +39,49 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
 </head>
 
-<header>
+<header class="bg-slate-600">
 
     <a></a>
     <nav>
-        <div id="home" class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto p-4">
+        <div id="home"
+            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto p-4">
             <div class="flex">
-            <img class="w-10 h-10" src="images/iconimage.png" alt="icon">
-              <span class="self-center text-4xl font-serif font-bold underline whitespace-nowrap text--500 bg-color">Ranbir Gill</span>
+                <img class="w-10 h-10" src="images/iconimage.png" alt="icon">
+                <span
+                    class="self-center text-4xl font-serif font-bold underline whitespace-nowrap text--500 bg-color">Ranbir
+                    Gill</span>
             </div>
 
-          <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
-              <span class="sr-only">Open main menu</span>
-              <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-              </svg>
-          </button>
-          <div class="hidden w-full md:block md:w-auto font-mono gap-4" id="navbar-default">
-            <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
-              <li>
-                <a href="#About Me" class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500" aria-current="page">About Me</a>
-              </li>
-              <li>
-                <a href="#Skills" class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
-              </li>
-              <li>
-                <a href="#Projects" class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
-              </li>
-            </ul>
-          </div>
+            <button data-collapse-toggle="navbar-default" type="button"
+                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                aria-controls="navbar-default" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 1h15M1 7h15M1 13h15" />
+                </svg>
+            </button>
+            <div class="hidden w-full md:block md:w-auto font-mono gap-4" id="navbar-default">
+                <ul
+                    class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                    <li>
+                        <a href="#About Me"
+                            class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500"
+                            aria-current="page">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#Skills"
+                            class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#Projects"
+                            class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
+    </nav>
 </header>
 
 <body>
