--- a/index.html
+++ b/index.html
@@ -11,20 +11,33 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-            screens: {
-                sm: '480px',
-                md: '620px',
-                lg: '976px',
-                xl: '1440px',
-            },
             theme: {
-                extend: {
-                    colors: {
-                        clifford: '#da373d',
-                    }
-                }
-            }
-        }
+    screens: {
+      sm: '480px',
+      md: '600px',
+      lg: '976px',
+      xl: '1440px',
+    },
+    fontFamily: {
+      sans: ['Graphik', 'sans-serif'],
+      serif: ['Merriweather', 'serif'],
+    },
+    extend: {
+      colors: {
+        graydark: '#A5A5A5',
+        graylight: '#a0aecd',
+      },
+      spacing: {
+        '128': '32rem',
+        '144': '36rem',
+      },
+      borderRadius: {
+        '4xl': '2rem',
+      },
+    },
+  },
+}
+        
 
         document.addEventListener('DOMContentLoaded', () => {
             const toggleButton = document.querySelector('[data-collapse-toggle="navbar-default"]');
@@ -39,12 +52,12 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
 </head>
 
-<header class="bg-slate-600">
+<header class="bg-graylight">
 
     <a></a>
     <nav>
         <div id="home"
-            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto p-4">
+            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-1 pr-1">
             <div class="flex">
                 <img class="w-10 h-10" src="images/iconimage.png" alt="icon">
                 <span
@@ -62,7 +75,7 @@
                         d="M1 1h15M1 7h15M1 13h15" />
                 </svg>
             </button>
-            <div class="hidden w-full md:block md:w-auto font-mono gap-4" id="navbar-default">
+            <div class="hidden w-full md:block md:w-auto font-mono text-lg gap-4" id="navbar-default">
                 <ul
                     class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
