--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       lg: '976px',
       xl: '1440px',
     },
-    fontFamily: {
+    extend: {
+        fontFamily: {
       sans: ['Graphik', 'sans-serif'],
       serif: ['Merriweather', 'serif'],
     },
-    extend: {
       colors: {
         graydark: '#A5A5A5',
         graylight: '#a0aecd',
@@ -79,16 +79,16 @@
                 <ul
                     class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
-                        <a href="#About Me"
+                        <a href="https://gill345.github.io/aboutpage.html"
                             class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500"
                             aria-current="page">About Me</a>
                     </li>
                     <li>
-                        <a href="#Skills"
+                        <a href="https://gill345.github.io/skillspage.html"
                             class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
                     </li>
                     <li>
-                        <a href="#Projects"
+                        <a href="https://gill345.github.io/projectspage.html"
                             class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
                     </li>
                 </ul>
