--- a/index.html
+++ b/index.html
@@ -9,35 +9,39 @@
     <title>Ranbir Gill</title>
     <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
-    screens: {
-      sm: '480px',
-      md: '600px',
-      lg: '976px',
-      xl: '1440px',
-    },
-    extend: {
-        fontFamily: {
-      sans: ['Graphik', 'sans-serif'],
-      serif: ['Merriweather', 'serif'],
-    },
-      colors: {
-        graydark: '#A5A5A5',
-        graylight: '#a0aecd',
-      },
-      spacing: {
-        '128': '32rem',
-        '144': '36rem',
-      },
-      borderRadius: {
-        '4xl': '2rem',
-      },
-    },
-  },
-}
-        
+                screens: {
+                    sm: '480px',
+                    md: '600px',
+                    lg: '976px',
+                    xl: '1440px',
+                },
+                extend: {
+                    fontFamily: {
+                        sans: ['Graphik', 'sans-serif'],
+                        serif: ['Merriweather', 'serif'],
+                        bitter: ['Bitter', 'serif'],
+                    },
+                    colors: {
+                        graydark: '#A5A5A5',
+                        graylight: '#a0aecd',
+                    },
+                    spacing: {
+                        '128': '32rem',
+                        '144': '36rem',
+                    },
+                    borderRadius: {
+                        '4xl': '2rem',
+                    },
+                },
+            },
+        }
+
 
         document.addEventListener('DOMContentLoaded', () => {
             const toggleButton = document.querySelector('[data-collapse-toggle="navbar-default"]');
@@ -61,7 +65,7 @@
             <div class="flex">
                 <img class="w-10 h-10" src="images/iconimage.png" alt="icon">
                 <span
-                    class="self-center text-4xl font-serif font-bold underline whitespace-nowrap text--500 bg-color">Ranbir
+                    class="self-center text-4xl font-bitter font-bold underline whitespace-nowrap text--500 bg-color">Ranbir
                     Gill</span>
             </div>
 
@@ -78,6 +82,11 @@
             <div class="hidden w-full md:block md:w-auto font-mono text-lg gap-4" id="navbar-default">
                 <ul
                     class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                    <li>
+                        <a href="https://gill345.github.io."
+                            class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500"
+                            aria-current="page">Home</a>
+                    </li>
                     <li>
                         <a href="https://gill345.github.io/aboutpage.html"
                             class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500"
