--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             theme: {
                 screens: {
                     sm: '480px',
-                    md: '600px',
+                    md: '725px',
                     lg: '976px',
                     xl: '1440px',
                 },
@@ -28,8 +28,8 @@
                         bitter: ['Bitter', 'serif'],
                     },
                     colors: {
-                        graydark: '#A5A5A5',
-                        graylight: '#a0aecd',
+                        blak: '#1D1D1',
+                        blue: '#0C1A1A',
                     },
                     spacing: {
                         '128': '32rem',
@@ -56,17 +56,16 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
 </head>
 
-<header class="bg-graylight">
+<header class="bg-blue">
 
     <a></a>
-    <nav>
+    <nav class="fixed left-0 w-full bg-slate-300  top-0 z-50">
         <div id="home"
-            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-1 pr-1">
+            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
                 <img class="w-10 h-10" src="images/iconimage.png" alt="icon">
                 <span
-                    class="self-center text-4xl font-bitter font-bold underline whitespace-nowrap text--500 bg-color">Ranbir
-                    Gill</span>
+                    class="self-center text-4xl font-bitter font-bold underline text-white whitespace-nowrap text--500 bg-color"> <a href="https://gill345.github.io.">Ranbir Gill<a></span>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button"
@@ -79,26 +78,26 @@
                         d="M1 1h15M1 7h15M1 13h15" />
                 </svg>
             </button>
-            <div class="hidden w-full md:block md:w-auto font-mono text-lg gap-4" id="navbar-default">
+            <div class="hidden w-full md:block md:w-auto font-bitter text-xl gap-4" id="navbar-default">
                 <ul
                     class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
                         <a href="https://gill345.github.io."
-                            class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500"
+                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
                             aria-current="page">Home</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/aboutpage.html"
-                            class="block py-2 text-md px-3 bg-blue-700 rounded md:bg-transparent md:p-0 text-purple-500 md:dark:hover:text-blue-500"
+                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
                             aria-current="page">About Me</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/skillspage.html"
-                            class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/projectspage.html"
-                            class="block py-2 text-md px-3 text-purple-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -107,7 +106,10 @@
 </header>
 
 <body>
-
+<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
+<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
+<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
+<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
 </body>
 
 </html>
