--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ranbir Gill</title>
     <link rel="icon" type="image/x-icon" href="images/icon.ico">
+    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Doto:wght@100..900&display=swap"
+        rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
@@ -26,10 +28,11 @@
                         sans: ['Graphik', 'sans-serif'],
                         serif: ['Merriweather', 'serif'],
                         bitter: ['Bitter', 'serif'],
+                        doto: ['Doto', 'serif'],
                     },
                     colors: {
-                        blak: '#1D1D1',
-                        blue: '#0C1A1A',
+                        lgrey: '#d4d4d4',
+                        dgrey: '#a5a5a5',
                     },
                     spacing: {
                         '128': '32rem',
@@ -37,6 +40,16 @@
                     },
                     borderRadius: {
                         '4xl': '2rem',
+                    },
+                    animation: {
+                        gradient: 'gradientAnimation 5s ease infinite',
+                    },
+                    keyframes: {
+                        gradientAnimation: {
+                            '0%': { 'background-position': '0% 50%' },
+                            '50%': { 'background-position': '100% 50%' },
+                            '100%': { 'background-position': '0% 50%' },
+                        },
                     },
                 },
             },
@@ -56,16 +69,17 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
 </head>
 
-<header class="bg-blue">
 
-    <a></a>
-    <nav class="fixed left-0 w-full bg-slate-300  top-0 z-50">
+<body class="flex flex-col items-center justify-center font-doto font-bold h-screen w-full bg-gradient-to-r from-green-500 via-turquoise-500 to-blue-500 bg-[length:200%_200%] animate-gradient">
+
+<!--
+    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
-                <img class="w-10 h-10" src="images/iconimage.png" alt="icon">
                 <span
-                    class="self-center text-4xl font-bitter font-bold underline text-white whitespace-nowrap text--500 bg-color"> <a href="https://gill345.github.io.">Ranbir Gill<a></span>
+                    class="self-center text-4xl font-bitter font-bold underline text-white whitespace-nowrap text--500 bg-color">
+                    <h1>Ranbir Gill<h1></span>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button"
@@ -103,13 +117,12 @@
             </div>
         </div>
     </nav>
-</header>
+-->
+<div class="pattern-dots-md text-pink-500 max-w-[10%] overflow-visible pr-8">
+<h1 class="text-5xl text-black pl-6 flex"> Hi I'm Ranbir Gill </h1>
 
-<body>
-<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
-<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
-<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
-<img src="https://getwallpapers.com/wallpaper/full/e/5/a/299879.jpg" alt="3">
+<h1 class="text-5xl text-black pl-6 flex"> Welcome To My Page!</h1>
+</div>
 </body>
 
 </html>
