--- a/projectspage.html
+++ b/projectspage.html
@@ -2,6 +2,121 @@
 
 <html lang="en">
 
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ranbir Gill</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Doto:wght@100..900&display=swap"
+        rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                screens: {
+                    sm: '480px',
+                    md: '725px',
+                    lg: '976px',
+                    xl: '1440px',
+                },
+                extend: {
+                    fontFamily: {
+                        sans: ['Graphik', 'sans-serif'],
+                        serif: ['Merriweather', 'serif'],
+                        bitter: ['Bitter', 'serif'],
+                        doto: ['Doto', 'serif'],
+                    },
+                    colors: {
+                        lgrey: '#d4d4d4',
+                        dgrey: '#a5a5a5',
+                    },
+                    spacing: {
+                        '128': '32rem',
+                        '144': '36rem',
+                    },
+                    borderRadius: {
+                        '4xl': '2rem',
+                    },
+                    animation: {
+                        gradient: 'gradientAnimation 5s ease infinite',
+                    },
+                    keyframes: {
+                        gradientAnimation: {
+                            '0%': { 'background-position': '0% 50%' },
+                            '50%': { 'background-position': '100% 50%' },
+                            '100%': { 'background-position': '0% 50%' },
+                        },
+                    },
+                },
+            },
+        }
+
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggleButton = document.querySelector('[data-collapse-toggle="navbar-default"]');
+            const navbar = document.getElementById('navbar-default');
+
+            toggleButton.addEventListener('click', () => {
+                navbar.classList.toggle('hidden');
+            });
+        });
+    </script>
+
+    <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
+</head>
+
+<header>
+
+    <a></a>
+    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50">
+        <div id="home"
+            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
+            <div class="flex">
+                <span
+                    class="self-center text-4xl font-bitter font-bold underline whitespace-nowrap text--500 bg-color">
+                    <h1>Ranbir Gill<h1></span>
+            </div>
+
+            <button data-collapse-toggle="navbar-default" type="button"
+                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                aria-controls="navbar-default" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M1 1h15M1 7h15M1 13h15" />
+                </svg>
+            </button>
+            <div class="hidden w-full md:block md:w-auto font-bitter text-xl gap-4" id="navbar-default">
+                <ul
+                    class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                    <li>
+                        <a href="https://gill345.github.io."
+                            style="border: 1px solid black; background-color: black;" class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-2 md:rounded-2xl md:text-white md:border-black md:p-1 md:align-middle md:hover:text-blue-700 md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
+                            aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="https://gill345.github.io/aboutpage.html"
+                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:pt-1 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
+                            aria-current="page">About Me</a>
+                    </li>
+                    <li>
+                        <a href="https://gill345.github.io/skillspage.html"
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:pt-1 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
+                    </li>
+                    <li>
+                        <a href="https://gill345.github.io/projectspage.html"
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:pt-1 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 
 </html>
