--- a/aboutpage.html
+++ b/aboutpage.html
@@ -9,17 +9,17 @@
     <title>Ranbir Gill</title>
     <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Doto:wght@100..900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Doto:wght@100..900&family=Permanent+Marker&display=swap"
         rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
                 screens: {
                     sm: '480px',
-                    md: '725px',
+                    md: '620px',
                     lg: '976px',
                     xl: '1440px',
                 },
@@ -29,10 +29,13 @@
                         serif: ['Merriweather', 'serif'],
                         bitter: ['Bitter', 'serif'],
                         doto: ['Doto', 'serif'],
+                        comorant: ['Cormorant Garamond', 'serif'],
+                        marker: ['Permanent Marker', 'serif'],
                     },
                     colors: {
                         lgrey: '#d4d4d4',
                         dgrey: '#a5a5a5',
+                        blue: '#a0aecd',
                     },
                     spacing: {
                         '128': '32rem',
@@ -43,12 +46,23 @@
                     },
                     animation: {
                         gradient: 'gradientAnimation 5s ease infinite',
+                        wave: 'wave 2s linear infinite',
+                        fadein: 'fadeIn 2s ease-in',
+                        slowfade: 'fadeIn 3s ease-in',
                     },
                     keyframes: {
                         gradientAnimation: {
                             '0%': { 'background-position': '0% 50%' },
                             '50%': { 'background-position': '100% 50%' },
                             '100%': { 'background-position': '0% 50%' },
+                        },
+                        wave: {
+                            '0%, 100%': { transform: 'rotate(0deg)' },
+                            '50%': { transform: 'rotate(15deg)' },
+                        },
+                        fadeIn: {
+                            '0%': { opacity: '0' },
+                            '100%': { opacity: '1' },
                         },
                     },
                 },
@@ -76,9 +90,9 @@
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
-                <span
-                    class="self-center text-4xl font-bitter font-bold underline whitespace-nowrap text--500 bg-color">
-                    <h1>Ranbir Gill<h1></span>
+                <span class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
+                    <h1>Ranbir Gill<h1>
+                </span>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button"
@@ -91,26 +105,26 @@
                         d="M1 1h15M1 7h15M1 13h15" />
                 </svg>
             </button>
-            <div class="hidden w-full md:block md:w-auto font-bitter text-xl gap-4" id="navbar-default">
+            <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
                 <ul
                     class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
                         <a href="https://gill345.github.io."
-                        style="border: 1px solid black; background-color: black;" class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-2 md:rounded-2xl md:text-white md:border-black md:p-1 md:align-middle md:hover:text-blue-700 md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
+                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">Home</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/aboutpage.html"
-                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 md:pt-1 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
+                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">About Me</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/skillspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 md:pt-1 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/projectspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 md:pt-1 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -118,5 +132,42 @@
     </nav>
 </header>
 
+<body class="bg-dgrey text-center font-comoront">
+
+    <h1 class="pt-28 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
+<section class="pt-4 pb-6 text-lg font-comorant animate-slowfade">
+    <p>
+        Hey there, my name is Ranbir Gill and I am currently a Computer Science student at the Toronto Metropolitan
+        University who is always eager to
+        learn new technologies and their applications.
+        My journey in Computer Science started from when I was quite young and playing video games on my Nintendo 3DS. Whenever I used to play, a part of me kept wondering, "How are these games really made", and well, ever since then I've had this fascination with computers, video games and coding. 
+    </p>
+
+    <br>
+
+    <p>
+        My fascination led me to pursue studies in Computer Science, and as a Computer Science student, I have been able to develop
+        strong problem-solving skills and experience with languages such as Java, Python and C. Currently, I'm
+        learning both Client-Side and Server-Side programming in relation to Web Development.
+    </p>
+
+    <br>
+
+    <p>
+        My ultimate goal is to work in the field of Software Development and utilize my knowledge and skills to
+        create innovative solutions to real world problems. I am always on the pursuit for new challenges and
+        opportunities to develop my skills, broaden my understanding, and make a meaningful impact. If you are
+        interested in connecting or perhaps learning more about me or my experience, please don't hesitate to reach
+        out.</p>
+
+</section>
+
+</body>
+
+<footer class="bg-lgrey w-full font-comorant">
+    <h1 class="text-2xl">Made By: Ranbir Gill</h1>
+    <h1 class="text-xl">Email: ranbir.gill@torontomu.ca </h1>
+    <h1 class="text-lg">Please reach out regarding any questions/concerns</h1>
+</footer>
 
 </html>
