--- a/projectspage.html
+++ b/projectspage.html
@@ -9,17 +9,15 @@
     <title>Ranbir Gill</title>
     <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://unpkg.com/pattern.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Doto:wght@100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Doto:wght@100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
                 screens: {
                     sm: '480px',
-                    md: '725px',
+                    md: '620px',
                     lg: '976px',
                     xl: '1440px',
                 },
@@ -29,10 +27,13 @@
                         serif: ['Merriweather', 'serif'],
                         bitter: ['Bitter', 'serif'],
                         doto: ['Doto', 'serif'],
+                        comorant: ['Cormorant Garamond', 'serif'],
+                        marker: ['Permanent Marker', 'serif'],
                     },
                     colors: {
                         lgrey: '#d4d4d4',
                         dgrey: '#a5a5a5',
+                        blue: '#a0aecd',
                     },
                     spacing: {
                         '128': '32rem',
@@ -77,7 +78,7 @@
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
                 <span
-                    class="self-center text-4xl font-bitter font-bold underline whitespace-nowrap text--500 bg-color">
+                    class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
                     <h1>Ranbir Gill<h1></span>
             </div>
 
@@ -91,26 +92,26 @@
                         d="M1 1h15M1 7h15M1 13h15" />
                 </svg>
             </button>
-            <div class="hidden w-full md:block md:w-auto font-bitter text-xl gap-4" id="navbar-default">
+            <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
                 <ul
                     class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
                         <a href="https://gill345.github.io."
-                            style="border: 1px solid black; background-color: black;" class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-2 md:rounded-2xl md:text-white md:border-black md:p-1 md:align-middle md:hover:text-blue-700 md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
+                        class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">Home</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/aboutpage.html"
-                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:pt-1 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue-500"
+                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">About Me</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/skillspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:pt-1 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Skills</a>
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/projectspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:pt-1 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 md:dark:hover:bg-transparent">Projects</a>
+                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
                     </li>
                 </ul>
             </div>
