--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="flex animate-slowfade">
         <a href="https://github.com/gill345"><img class="hover:animate-bounce" width="60" height="60"
                 src="https://img.icons8.com/dotty/80/github.png" alt="github" /></a>
-        <a href="www.linkedin.com/in/ranbir-gill"><img class="hover:animate-bounce" width="60" height="60"
+        <a href="https://linkedin.com/in/ranbir-gill"><img class="hover:animate-bounce" width="60" height="60"
                 src="https://img.icons8.com/dotty/80/linkedin.png" alt="linkedin" /></a>
         <a href="mailto:ranbir.gill@torontomu.ca"> <img class="hover:animate-bounce" width="60" height="60" src="https://img.icons8.com/carbon-copy/100/gmail-new.png" alt="gmail-new"/></a>
     </div>
