--- a/aboutpage.html
+++ b/aboutpage.html
@@ -132,7 +132,7 @@
     </nav>
 </header>
 
-<body class="bg-dgrey text-center font-comoront m-0">
+<body class="bg-dgrey text-center font-comoront h-screen">
 
     <h1 class="pt-28 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
 <section class="pt-4 pb-6 text-lg font-comorant animate-slowfade">
