--- a/aboutpage.html
+++ b/aboutpage.html
@@ -164,7 +164,7 @@
 
 </body>
 
-<footer class="bg-lgrey w-full font-comorant">
+<footer class="bg-lgrey w-full font-comorant bottom-0">
     <h1 class="text-2xl">Made By: Ranbir Gill</h1>
     <h1 class="text-xl">Email: ranbir.gill@torontomu.ca </h1>
     <h1 class="text-lg">Please reach out regarding any questions/concerns</h1>
