--- a/skillspage.html
+++ b/skillspage.html
@@ -119,5 +119,32 @@
     </nav>
 </header>
 
+<body>
+    <h1>Languages/Frameworks I Am Familiar With</h1>
+    <div>
+        <p>Python</p>
+        <p>Java</p>
+        <p>C/C++</p>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>BootStrap</p>
+        <p>JavaScript</p>
+        <p>jQuery</p>
+        <p>PHP</p>
+        <p>SQL/MYSQL</p>
+        <p>Ruby</p>
+        <p>Perl</p>
+        <p>ASP</p>
+        <p>XML</p>
+        <p>Json</p>
+        <p>Lisp</p>
+    </div>
+    <h1>Software Tools I Can Use</h1>
+    <p
+    <div>
+        
+    </div>
+</body>
+
 
 </html>
