--- a/projectspage.html
+++ b/projectspage.html
@@ -72,14 +72,14 @@
 
 <header>
 
-    <a></a>
-    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50">
+    
+    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50 opacity-75">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
                 <span
                     class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
-                    <h1>Ranbir Gill<h1></span>
+                    <h1 class="opacity-100">Ranbir Gill<h1></span>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button"
