--- a/skillspage.html
+++ b/skillspage.html
@@ -72,14 +72,14 @@
 
 <header>
 
-    <a></a>
-    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50">
+    
+    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50 opacity-75">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
                 <span
                     class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
-                    <h1>Ranbir Gill<h1></span>
+                    <h1 class="opacity-100">Ranbir Gill<h1></span>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button"
@@ -120,12 +120,12 @@
 </header>
 
 <body>
-    <h1>Languages/Frameworks I Am Familiar With</h1>
-    <div>
-        <p>Python</p>
-        <p>Java</p>
-        <p>C/C++</p>
-        <p>HTML</p>
+    <h1 class="pt-32 text-center text-2xl font-comorant font-bold">Languages/Frameworks I Am Familiar With</h1>
+    <div class=" pt-32 grid grid-cols-2 md:grid-cols-6 auto-cols-max text-center align-middle">
+        <p class="border-2 border-black p-9 font-comorant text-lg">Python</p>
+        <p class="border-2 border-black p-9 font-comorant text-lg">Java</p>
+        <p class="border-2 border-black p-9 font-comorant text-lg">C/C++</p>
+        <p class="border-2 border-black p-9 font-comorant text-lg">HTML</p>
         <p>CSS</p>
         <p>BootStrap</p>
         <p>JavaScript</p>
