--- a/aboutpage.html
+++ b/aboutpage.html
@@ -86,12 +86,12 @@
 <header>
 
     <a></a>
-    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50">
+    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50 opacity-75">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
                 <span class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
-                    <h1>Ranbir Gill<h1>
+                    <h1 class="opacity-100">Ranbir Gill<h1>
                 </span>
             </div>
 
@@ -107,7 +107,7 @@
             </button>
             <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
                 <ul
-                    class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                    class="font-medium opacity-100 flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
                         <a href="https://gill345.github.io."
                             class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
