--- a/aboutpage.html
+++ b/aboutpage.html
@@ -83,9 +83,9 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
 </head>
 
+<div class = "flex flex-col h-screen">
 <header>
 
-    <a></a>
     <nav class="fixed left-0 w-full bg-lgrey top-0 z-50 opacity-75">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
@@ -132,7 +132,7 @@
     </nav>
 </header>
 
-<body class="bg-dgrey text-center font-comoront min-h-screen">
+<body class="bg-dgrey flex-grow text-center font-comoront">
 
     <h1 class="pt-28 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
 <section class="pt-4 pb-6 text-lg font-comorant animate-slowfade">
@@ -164,10 +164,10 @@
 
 </body>
 
-<footer class="sticky bg-lgrey w-full font-comorant bottom-0">
+<footer class="inset-x-0 bottom-0 bg-lgrey w-full font-comorant z-0">
     <h1 class="text-2xl">Made By: Ranbir Gill</h1>
     <h1 class="text-xl">Email: ranbir.gill@torontomu.ca </h1>
     <h1 class="text-lg">Please reach out regarding any questions/concerns</h1>
 </footer>
-
+</div>
 </html>
