--- a/aboutpage.html
+++ b/aboutpage.html
@@ -137,7 +137,7 @@
 <body class="bg-dgrey text-center font-comoront">
 
     <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
-<section class="pt-4 pb-6 text-lg font-comorant animate-slowfade">
+<section class="pt-12 pb-6 text-lg font-comorant animate-slowfade">
     <p>
         Hey there, my name is Ranbir Gill and I am currently a Computer Science student at the Toronto Metropolitan
         University who is always eager to
@@ -150,7 +150,8 @@
     <p>
         My fascination led me to pursue studies in Computer Science, and as a Computer Science student, I have been able to develop
         strong problem-solving skills and experience with languages such as Java, Python and C. Currently, I'm
-        learning both Client-Side and Server-Side programming in relation to Web Development.
+        learning both Client-Side and Server-Side programming in relation to Web Development. I've also began exploring Cloud Computing 
+        and its applications, particularly using Microsoft Azure. 
     </p>
 
     <br>
