--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
 
     <br>
     <div class="flex">
-        <a href="https://gill345.github.io/aboutpage.html" class="text-xl font-comorant font-light hover:text-purple">About Me</a>
+        <a href="https://gill345.github.io/aboutpage.html" class="text-xl font-comorant font-bold hover:text-purple">About Me</a>
         <h1 class="text-2xl">  |  </h1>
-        <a href="https://gill345.github.io/skillspage.html" class="text-xl font-comorant font-light hover:text-purple">My Skills/Languages</a>
+        <a href="https://gill345.github.io/skillspage.html" class="text-xl font-comorant font-bold hover:text-purple">My Skills/Languages</a>
         <h1 class="text-2xl">  |  </h1>
-        <a href="https://gill345.github.io/projectspage.html" class="text-xl font-comorant font-light hover:text-purple">Projects</a>
+        <a href="https://gill345.github.io/projectspage.html" class="text-xl font-comorant font-bold hover:text-purple">Projects</a>
         
     </div>
 </body>
