--- a/skillspage.html
+++ b/skillspage.html
@@ -137,11 +137,16 @@
 
 <body>
     <h1 class="pt-32 text-center text-2xl font-comorant font-bold">Languages/Frameworks I Am Familiar With</h1>
-    <div class=" pt-32 grid grid-cols-2 md:grid-cols-6 auto-cols-max text-center align-middle">
-        <p class="border-2 border-black p-9 font-comorant text-lg">Python</p>
-        <p class="border-2 border-black p-9 font-comorant text-lg">Java</p>
-        <p class="border-2 border-black p-9 font-comorant text-lg">C/C++</p>
-        <p class="border-2 border-black p-9 font-comorant text-lg">HTML</p>
+    <div class=" pt-32 grid grid-cols-3 md:grid-cols-5 auto-cols-max text-center align-middle">
+        
+        <div class="border-2 border-black p-9 font-comorant text-lg">
+            <img width="48" height="48" src="https://img.icons8.com/color/48/python--v1.png" alt="python--v1"/>
+            <p>Python</p>
+        </div>
+        
+        <p>Java</p>
+        <p>C/C++</p>
+        <p>HTML</p>
         <p>CSS</p>
         <p>BootStrap</p>
         <p>JavaScript</p>
@@ -150,7 +155,6 @@
         <p>SQL/MYSQL</p>
         <p>Ruby</p>
         <p>Perl</p>
-        <p>ASP</p>
         <p>XML</p>
         <p>Json</p>
         <p>Lisp</p>
