--- a/aboutpage.html
+++ b/aboutpage.html
@@ -48,7 +48,7 @@
                         gradient: 'gradientAnimation 5s ease infinite',
                         wave: 'wave 2s linear infinite',
                         fadein: 'fadeIn 2s ease-in',
-                        slowfade: 'fadeIn 3s ease-in',
+                        slowfade: 'fadeIn 2.3s ease-in',
                     },
                     keyframes: {
                         gradientAnimation: {
@@ -134,7 +134,7 @@
     </nav>
 </header>
 
-<body class="bg-dgrey text-center font-comoront">
+<body class="bg-dgrey text-center font-comoront font-bold">
 
     <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
 <section class="pt-12 pb-6 text-lg font-comorant animate-slowfade">
