--- a/skillspage.html
+++ b/skillspage.html
@@ -136,7 +136,7 @@
 
     <body class="bg-dgrey">
         <h1 class="pt-16 text-center text-3xl font-comorant font-bold">Languages/Frameworks I Am Familiar With</h1>
-        <div class="pt-8 pb-8 grid grid-cols-3 md:grid-cols-5 gap-1 auto-cols-max text-center align-middle">
+        <div class="pt-8 pl-4 pr-4 pb-8 grid grid-cols-3 md:grid-cols-5 gap-1 auto-cols-max text-center align-middle">
 
             <div
                 class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
@@ -217,7 +217,7 @@
         </div>
 
         <h1 class="pt-8 text-center text-3xl font-comorant font-bold">Software Tools/Platforms I Can Use</h1>
-        <div class="pt-8 pb-8 grid grid-cols-2 md:grid-cols-5 gap-1 auto-cols-max text-center align-middle">
+        <div class="pt-8 pb-8 pl-4 pr-4 grid grid-cols-2 md:grid-cols-5 gap-1 auto-cols-max text-center align-middle">
 
             <div class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
                 <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/fluency/60/azure-1.png" alt="azure-1"/>
@@ -262,7 +262,7 @@
         </div>
 
         <h1 class="pt-8 text-center text-3xl font-comorant font-bold">Soft Skills</h1>
-        <div class="pt-8 pb-8 grid grid-cols-2 md:grid-cols-3 gap-1 auto-cols-max text-center align-middle">
+        <div class="pt-8 pb-8 pl-4 pr-4 grid grid-cols-2 md:grid-cols-3 gap-1 auto-cols-max text-center align-middle">
             <div class="border-2 bg-lgrey border-dgrey rounded-lg p-9 font-comorant text-lg shadow-2xl transform transition-transform duration-200 hover:scale-90">
                 <img class="mx-auto" width="60" height="60" src="https://img.icons8.com/color/60/onboarding.png" alt="onboarding"/>
                 <p>Team Work</p>
