--- a/aboutpage.html
+++ b/aboutpage.html
@@ -145,6 +145,10 @@
         My journey in Computer Science started from when I was quite young and playing video games on my Nintendo 3DS. Whenever I used to play, a part of me kept wondering, "How are these games really made", and well, ever since then I've had this fascination with computers, video games and coding. 
     </p>
 
+    <div class="pt-8 pb-4">
+    <img class="w-80 mx-auto shadow-2xl" src="images/HNI_0019.JPG" alt="Nintendo">
+    <h2 class="pt-2">A random screenshot from my 3DS</h2>
+    </div>
     <br>
 
     <p>
@@ -153,6 +157,7 @@
         learning both Client-Side and Server-Side programming in relation to Web Development. I've also began exploring Cloud Computing 
         and its applications, particularly using Microsoft Azure. 
     </p>
+
 
     <br>
 
