--- a/projectspage.html
+++ b/projectspage.html
@@ -140,19 +140,19 @@
 
     <section class="text-left font-comorant">
         <h1 class="pt-8 text-2xl font-bold">MonkeyBot</h1>
-        <img class="" src="" alt="bot">
+        <img class="" src="" alt="pending">
         <p class="text-lg">MonkeyBot was a Python Discord Bot that I initially created for learning purposes but then decided to add it to my group server for testing purposes. At the start it had simple commands such as response commands and some minigames like rock paper scisors and guess the number. As I tested and learned new features I added more functionality such as the music player ability. Apart from that it's still a simple bot with more plans in the future.</p>
     </section>
 
     <section class="text-left font-comorant">
         <h1 class="pt-8 text-2xl font-bold">Quick Weather Site</h1>
-        <img class="" src="" alt="bot">
+        <img class="" src="" alt="pending">
         <p class="text-lg">Quick Weather Site was a site that I created as an additional source of weather info when needed. Often I would check the weather on my phone and then look outside and see a completely different scene. As such I decided to make a PHP site that would allow me to quickly search any city and gets its current weather from OpenWeatherSource. Additionally it would save that city as a cookie so I do not have to re-enter the city name upon search. </p>
     </section>
 
     <section class="text-left font-comorant pb-6">
         <h1 class="pt-8 text-2xl font-bold">UberUI</h1>
-        <img class="" src="" alt="bot">
+        <img class="" src="" alt="pending">
         <p class="text-lg">UberUI was a Java project consisting of 10+ classes which allowed multiple riders and drivers. Additionally, various algorithms were used to replicate Ubers system in a console format.</p>
     </section>
 
