--- a/projectspage.html
+++ b/projectspage.html
@@ -156,6 +156,12 @@
         <p class="text-lg">UberUI was a Java project consisting of 10+ classes which allowed multiple riders and drivers. Additionally, various algorithms were used to replicate Ubers system in a console format.</p>
     </section>
 
+    <section class="text-left font-comorant pb-6">
+        <h1 class="pt-8 text-2xl font-bold">Work in Progress</h1>
+        <img class="" src="" alt="pending">
+        <p class="text-lg">Work in Progress</p>
+    </section>
+
 
 
 </body>
