--- a/aboutpage.html
+++ b/aboutpage.html
@@ -85,92 +85,98 @@
 
 
 
-    <div class="flex flex-col min-h-screen">
-<header>
+<div class="flex flex-col min-h-screen">
+    <header>
 
-    <nav class="left-0 w-full bg-lgrey top-0 z-50">
-        <div id="home"
-            class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
-            <div class="flex">
-                <span class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
-                    <h1 class="opacity-100">Ranbir Gill<h1>
-                </span>
+        <nav class="left-0 w-full bg-lgrey top-0 z-50">
+            <div id="home"
+                class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
+                <div class="flex">
+                    <span class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
+                        <h1 class="opacity-100">Ranbir Gill<h1>
+                    </span>
+                </div>
+
+                <button data-collapse-toggle="navbar-default" type="button"
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+                    aria-controls="navbar-default" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        viewBox="0 0 17 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M1 1h15M1 7h15M1 13h15" />
+                    </svg>
+                </button>
+                <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
+                    <ul
+                        class="font-medium opacity-100 md:mx-0 md:space-y-0 mx-4 space-y-4 flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                        <li>
+                            <a href="https://gill345.github.io."
+                                class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
+                                aria-current="page">Home</a>
+                        </li>
+                        <li>
+                            <a href="https://gill345.github.io/aboutpage.html"
+                                class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
+                                aria-current="page">About Me</a>
+                        </li>
+                        <li>
+                            <a href="https://gill345.github.io/skillspage.html"
+                                class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
+                        </li>
+                        <li>
+                            <a href="https://gill345.github.io/projectspage.html"
+                                class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+    </header>
 
-            <button data-collapse-toggle="navbar-default" type="button"
-                class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-                aria-controls="navbar-default" aria-expanded="false">
-                <span class="sr-only">Open main menu</span>
-                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                    viewBox="0 0 17 14">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M1 1h15M1 7h15M1 13h15" />
-                </svg>
-            </button>
-            <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
-                <ul
-                    class="font-medium opacity-100 md:mx-0 md:space-y-0 mx-4 space-y-4 flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
-                    <li>
-                        <a href="https://gill345.github.io."
-                            class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
-                            aria-current="page">Home</a>
-                    </li>
-                    <li>
-                        <a href="https://gill345.github.io/aboutpage.html"
-                            class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
-                            aria-current="page">About Me</a>
-                    </li>
-                    <li>
-                        <a href="https://gill345.github.io/skillspage.html"
-                            class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
-                    </li>
-                    <li>
-                        <a href="https://gill345.github.io/projectspage.html"
-                            class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
-                    </li>
-                </ul>
+    <body class="bg-dgrey text-center font-comoront font-bold">
+
+        <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
+        <section class="pt-12 pb-6 text-lg font-comorant animate-slowfade">
+            <p>
+                Hey there, my name is Ranbir Gill and I am currently a Computer Science student at the Toronto
+                Metropolitan
+                University who is always eager to
+                learn new technologies and their applications.
+                My journey in Computer Science started from when I was quite young and playing video games on my
+                Nintendo 3DS. Whenever I used to play, a part of me kept wondering, "How are these games really made",
+                and well, ever since then I've had this fascination with computers, video games and coding.
+            </p>
+
+            <div class="pt-8 pb-4">
+                <img class="w-80 mx-auto shadow-2xl" src="images/HNI_0019.JPG" alt="Nintendo">
+                <h2 class="pt-2">A random screenshot from my 3DS</h2>
             </div>
-        </div>
-    </nav>
-</header>
+            <br>
 
-<body class="bg-dgrey text-center font-comoront font-bold">
-
-    <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
-<section class="pt-12 pb-6 text-lg font-comorant animate-slowfade">
-    <p>
-        Hey there, my name is Ranbir Gill and I am currently a Computer Science student at the Toronto Metropolitan
-        University who is always eager to
-        learn new technologies and their applications.
-        My journey in Computer Science started from when I was quite young and playing video games on my Nintendo 3DS. Whenever I used to play, a part of me kept wondering, "How are these games really made", and well, ever since then I've had this fascination with computers, video games and coding. 
-    </p>
-
-    <div class="pt-8 pb-4">
-    <img class="w-80 mx-auto shadow-2xl" src="images/HNI_0019.JPG" alt="Nintendo">
-    <h2 class="pt-2">A random screenshot from my 3DS</h2>
-    </div>
-    <br>
-
-    <p>
-        My fascination led me to pursue studies in Computer Science, and as a Computer Science student, I have been able to develop
-        strong problem-solving skills and experience with languages such as Java, Python and C. Currently, I'm
-        learning both Client-Side and Server-Side programming in relation to Web Development. I've also began exploring Cloud Computing 
-        and its applications, particularly using Microsoft Azure. 
-    </p>
+            <p>
+                My fascination led me to pursue studies in Computer Science, and as a Computer Science student, I have
+                been able to develop
+                strong problem-solving skills and experience with languages such as Java, Python and C. Currently, I'm
+                learning both Client-Side and Server-Side programming in relation to Web Development. I've also began
+                exploring Cloud Computing
+                and its applications, particularly using Microsoft Azure.
+            </p>
 
 
-    <br>
+            <br>
 
-    <p>
-        My ultimate goal is to work in the field of Software Development and utilize my knowledge and skills to
-        create innovative solutions to real world problems. I am always on the pursuit for new challenges and
-        opportunities to develop my skills, broaden my understanding, and make a meaningful impact. If you are
-        interested in connecting or perhaps learning more about me or my experience, please don't hesitate to reach
-        out.</p>
+            <p>
+                My ultimate goal is to work in the field of Software Development and utilize my knowledge and skills to
+                create innovative solutions to real world problems. I am always on the pursuit for new challenges and
+                opportunities to develop my skills, broaden my understanding, and make a meaningful impact. If you are
+                interested in connecting or perhaps learning more about me or my experience, please don't hesitate to
+                reach
+                out.</p>
 
-</section>
+        </section>
 
-</body>
+    </body>
 </div>
 <footer class="inset-x-0 bottom-0 bg-lgrey w-full font-comorant z-0 text-center">
     <h1 class="text-2xl">Made By: Ranbir Gill</h1>
@@ -178,5 +184,6 @@
         <h1 class="text-xl text-indigo-500 hover:text-blue">ranbir.gill@torontomu.ca</h1>
     </a>
 </footer>
-    </div>
+</div>
+
 </html>
