--- a/index.html
+++ b/index.html
@@ -101,17 +101,21 @@
                 src="https://img.icons8.com/dotty/80/github.png" alt="github" /></a>
         <a href="https://linkedin.com/in/ranbir-gill"><img class="hover:animate-bounce" width="60" height="60"
                 src="https://img.icons8.com/dotty/80/linkedin.png" alt="linkedin" /></a>
-        <a href="mailto:ranbir.gill@torontomu.ca"> <img class="hover:animate-bounce" width="60" height="60" src="https://img.icons8.com/carbon-copy/100/gmail-new.png" alt="gmail-new"/></a>
+        <a href="mailto:ranbir.gill@torontomu.ca"> <img class="hover:animate-bounce" width="60" height="60"
+                src="https://img.icons8.com/carbon-copy/100/gmail-new.png" alt="gmail-new" /></a>
     </div>
 
     <br>
     <div class="flex">
-        <a href="https://gill345.github.io/aboutpage.html" class="text-xl font-comorant font-bold hover:text-purple">About Me</a>
-        <h1 class="text-2xl">  |  </h1>
-        <a href="https://gill345.github.io/skillspage.html" class="text-xl font-comorant font-bold hover:text-purple">My Skills/Languages</a>
-        <h1 class="text-2xl">  |  </h1>
-        <a href="https://gill345.github.io/projectspage.html" class="text-xl font-comorant font-bold hover:text-purple">Projects</a>
-        
+        <a href="https://gill345.github.io/aboutpage.html"
+            class="text-xl font-comorant font-bold hover:text-purple">About Me</a>
+        <h1 class="text-2xl"> | </h1>
+        <a href="https://gill345.github.io/skillspage.html" class="text-xl font-comorant font-bold hover:text-purple">My
+            Skills/Languages</a>
+        <h1 class="text-2xl"> | </h1>
+        <a href="https://gill345.github.io/projectspage.html"
+            class="text-xl font-comorant font-bold hover:text-purple">Projects</a>
+
     </div>
 </body>
 
