--- a/projectspage.html
+++ b/projectspage.html
@@ -134,11 +134,11 @@
         </nav>
     </header>
 
-    <body class="bg-dgrey text-center font-comoront pr-5 pl-5">
+    <body class="bg-dgrey text-center font-comoront">
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
-        <section class="text-left font-comorant">
+        <section class="text-left font-comorant pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold">MonkeyBot</h1>
             <img class="hover:scale-125 transition-all duration-300 w-80 h-80 pt-6 pb-6" src="images/discord.png"
                 alt="pending">
@@ -149,7 +149,7 @@
                 still a simple bot with more plans in the future.</p>
         </section>
 
-        <section class="text-left font-comorant">
+        <section class="text-left font-comorant pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold">Quick Weather Site</h1>
             <img class="hover:scale-125 transition-all duration-300 w-80 h-80 pt-6 pb-6" src="images/weather.png"
                 alt="pending">
@@ -160,7 +160,7 @@
                 have to re-enter the city name upon search. </p>
         </section>
 
-        <section class="text-left font-comorant pb-6">
+        <section class="text-left font-comorant pb-6 pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold">UberUI</h1>
             <img class="hover:scale-125 transition-all duration-300 w-80 h-80 pt-6 pb-6" src="images/uberui.png"
                 alt="pending">
@@ -168,7 +168,7 @@
                 drivers. Additionally, various algorithms were used to replicate Ubers system in a console format.</p>
         </section>
 
-        <section class="text-left font-comorant pb-6">
+        <section class="text-left font-comorant pb-6 pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold">Work in Progress</h1>
             <img class="" src="" alt="pending">
             <p class="text-lg">Work in Progress</p>
