--- a/projectspage.html
+++ b/projectspage.html
@@ -134,7 +134,7 @@
         </nav>
     </header>
 
-    <body class="bg-dgrey text-center font-comoront">
+    <body class="bg-gradient-to-r from-lgrey via-dgrey to-slate-500 bg-[length:200%_200%] animate-gradient text-center font-comoront">
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
