--- a/skillspage.html
+++ b/skillspage.html
@@ -134,7 +134,7 @@
         </nav>
     </header>
 
-    <body class="bg-dgrey">
+    <body class="bg-gradient-to-r from-lgrey via-dgrey to-slate-500 bg-[length:200%_200%] animate-gradient">
         <h1 class="pt-16 text-center text-3xl font-comorant font-bold">Languages/Frameworks I Am Familiar With</h1>
         <div class="pt-8 pl-4 pr-4 pb-8 grid grid-cols-3 md:grid-cols-5 gap-1 auto-cols-max text-center align-middle">
 
