--- a/projectspage.html
+++ b/projectspage.html
@@ -163,6 +163,7 @@
 
         <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
+            <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
             <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/weather.png"
                 alt="pending">
             <p class="text-lg text-center">Quick Weather Site was a site that I created as an additional source of
