--- a/projectspage.html
+++ b/projectspage.html
@@ -152,11 +152,11 @@
 
         <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/bike.png"
+            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/cycles.png"
                 alt="pending">
-            <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can view bikes
+            <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can sign up, view bikes
                 available for rent, rent out a bike, and post their own bike up for rent.
-                To store bike and rental information I decided to utilize SQL to store this data and PHP for the overall
+                To store bike and rental information I decided to utilize a MySQL database to store this data and PHP for the overall
                 input and data processing. I plan to add more functionality in the future, such as integrating payment systems.
             </p>
         </section>
