--- a/projectspage.html
+++ b/projectspage.html
@@ -149,7 +149,7 @@
                 learned new features I added more functionality such as the music player ability that uses the YT-DLP library. Apart from that it's
                 still a simple bot with more plans in the future.</p>
         </section>
-
+        <hr>
         <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
             <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/cycles.png"
@@ -161,11 +161,14 @@
             </p>
         </section>
 
+        <hr>
         <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
             <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
-            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/weather.png"
-                alt="pending">
+            <video class="w-96 h-96 pt-6 pb-6" controls loop>
+                <source src="images/bicycles.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
             <p class="text-lg text-center">Quick Weather Site was a site that I created as an additional source of
                 weather info when
                 needed. Often I would check the weather on my phone and then look outside and see a completely different
@@ -175,7 +178,7 @@
                 depending on local weather conditions.
             </p>
         </section>
-
+        <hr>
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">UberUI</h1>
             <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/uberui.png"
@@ -186,7 +189,7 @@
                 hundereds of various scenarios.
             </p>
         </section>
-
+        <hr>
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold italics underline">Work in Progress</h1>
             <img class="" src="" alt="pending">
